updates metadata to Pivot Ahead

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Polymer Starter Kit",
-  "short_name": "PSK",
+  "name": "Pivot Ahead",
+  "short_name": "PA",
   "start_url": "/?homescreen=1",
   "display": "standalone",
   "theme_color": "#2E3AA1",
