--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "polymer-starter-kit",
+  "name": "pivot-ahead",
   "dependencies": {
     "app-layout": "PolymerElements/app-layout#^0.9.0",
     "app-route": "PolymerElements/app-route#^0.9.1",
