--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,15 @@
     "paper-styles": "PolymerElements/paper-styles#^1.1.0",
     "polymer": "Polymer/polymer#^1.6.0",
     "google-chart": "GoogleWebComponents/google-chart#^1.1.0",
-    "polymerfire": "firebase/polymerfire#^0.9.4"
+    "polymerfire": "firebase/polymerfire#^0.9.4",
+    "paper-tabs": "PolymerElements/paper-tabs#^1.6.2",
+    "paper-fab": "PolymerElements/paper-fab#^1.2.0",
+    "paper-card": "PolymerElements/paper-card#^1.1.1",
+    "paper-item": "PolymerElements/paper-item#^1.2.1",
+    "paper-input": "PolymerElements/paper-input#^1.1.15",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.3.2",
+    "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.1.2"
   },
   "private": true
 }
